bpo-37126: Allow structseq objects to be tracked by the GC